--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "eslint-config-hardcore": "^24.4.0",
     "vue": "^3.2.31"
   },
   "devDependencies": {
@@ -20,6 +19,9 @@
     "@types/jsdom": "^16.2.14",
     "@types/node": "^16.11.25",
     "@vitejs/plugin-vue": "^2.2.2",
+    "@volar/pug-language-service": "^0.33.9",
+    "@volar/typescript-language-service": "^0.33.9",
+    "@volar/vue-language-service": "^0.33.9",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
@@ -31,6 +33,7 @@
     "jsdom": "^19.0.0",
     "prettier": "^2.5.1",
     "start-server-and-test": "^1.14.0",
+    "stylelint": "^14.6.1",
     "typescript": "~4.5.5",
     "vite": "^2.8.4",
     "vitest": "^0.5.0",
