--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:e2e": "start-server-and-test preview http://127.0.0.1:5050/ 'cypress open'",
     "test:e2e:ci": "start-server-and-test preview http://127.0.0.1:5050/ 'cypress run'",
     "typecheck": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore && npx stylelint ./src/**/*.vue"
   },
   "dependencies": {
     "vue": "^3.2.31"
@@ -32,9 +32,11 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^8.2.0",
     "jsdom": "^19.0.0",
+    "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
     "start-server-and-test": "^1.14.0",
     "stylelint": "^14.6.1",
+    "stylelint-config-recommended-vue": "^1.4.0",
     "typescript": "~4.5.5",
     "vite": "^2.8.4",
     "vitest": "^0.5.0",
